--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{ title }}</title>
+    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'/>
+    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="{{ style }}">
 </head>
 <body>
+    <header>
+        <nav class="wrapper">
+            <a href="#">Home</a>
+            <div class="dropdown">
+                <p class="dropbtn">Guides <i class="fa fa-caret-down"></i></p>
+                <div class="dropdown-content">
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                </div>
+            </div>
+        </nav>
+        <div class="logo">
+
+        </div>
+    </header>
     {{ content | safe }}
 </body>
 </html>
