--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Charset / Viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    
+    <!-- (SEO) Title / Author / Description / Keywords / Copyright -->
     <title>{{ title }}</title>
+    <meta name="author" content="Mathias Camus">
+    <meta name="description" content="A tech blog about scripts, setups, overclocking, lots of guides and games to play!">
+    <meta name="keywords" content="web development, scripts, guides, games">
+    <meta name="copyright" content="iMath is a registered trademark">
+
+    <!-- Canonical / Alternate -->
+    <link rel="canonical" href="http://www.imath.tech">
+    <!-- <link rel="alternate" type="application/rss+xml" title="Prodity Home" href=""> -->
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" type="image/ico" href="/assets/img/favicon/favicon.png" />
+    <link rel="apple-touch-icon" href="/assets/img/favicon/apple-touch-icon.png" />
+    <link rel="icon" href="/assets/img/favicon/android-favicon.png">
+
+    <!-- Css start -->
+    <!-- Font Awesome css -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'/>
+    <!-- Swiper.js css -->
+    <!-- Google Fonts css -->
+
+    <!-- custom css -->
     <link rel="stylesheet" href="css/global.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="{{ style }}">
+    <!-- Css End -->
+
+    <!-- scripts -->
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+    <script src="js/header.js"></script>
+    <!-- end scripts -->
 </head>
 <body>
     <header>
-        <nav class="wrapper">
-            <a href="#">Home</a>
+        <nav>
+            <a href="#" id="home">Home</a>
             <div class="dropdown">
                 <p class="dropbtn">Guides <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
@@ -22,11 +50,48 @@
                     <a href="#">page</a>
                 </div>
             </div>
+            <div class="dropdown">
+                <p class="dropbtn">Projects <i class="fa fa-caret-down"></i></p>
+                <div class="dropdown-content">
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <p class="dropbtn">Games <i class="fa fa-caret-down"></i></p>
+                <div class="dropdown-content">
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <p class="dropbtn">Javascript <i class="fa fa-caret-down"></i></p>
+                <div class="dropdown-content">
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                </div>
+            </div>
+            <div class="dropdown">
+                <p class="dropbtn">Info <i class="fa fa-caret-down"></i></p>
+                <div class="dropdown-content">
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                    <a href="#">page</a>
+                </div>
+            </div>
         </nav>
         <div class="logo">
-
+            <img src="img/logo.png" alt="logo">
         </div>
     </header>
-    {{ content | safe }}
+    <main>
+        {{ content | safe }}
+    </main>
+
+    
+    
 </body>
 </html>
