pages made and started rain

--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -57,20 +57,20 @@
             <div class="dropdown">
                 <p class="dropbtn" id="games">Games <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="#">Brickbreaker</a>
+                    <a href="/games/brickbreaker">Brickbreaker</a>
                 </div>
             </div>
             <div class="dropdown">
                 <p class="dropbtn" id="javascript">Javascript <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="#">Rain</a>
+                    <a href="/javascript/rain">Rain</a>
                 </div>
             </div>
             <div class="dropdown">
                 <p class="dropbtn" id="info">Info <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
                     <a href="#">General info</a>
-                    <a href="info/setup">My setup</a>
+                    <a href="/info/setup">My setup</a>
                 </div>
             </div>
         </nav>
