--- a/src/scss/brickbreaker.scss
+++ b/src/scss/brickbreaker.scss
@@ -1,1 +1,18 @@
 @import "partials/global";
+
+.container {
+    padding-top: 10rem;
+    height: 110vh;
+    background: linear-gradient($black, $darkblue);
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+
+        h1 {
+            color: $white;
+        }
+    }
+}
