--- a/src/scss/rain.scss
+++ b/src/scss/rain.scss
@@ -9,5 +9,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+
+
+        h1 {
+            color: $white;
+        }
     }
 }
