--- a/src/scss/brickbreaker.scss
+++ b/src/scss/brickbreaker.scss
@@ -14,5 +14,10 @@
         h1 {
             color: $white;
         }
+
+        p {
+            color: $white;
+            margin-bottom: 2rem;
+        }
     }
 }
