--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -43,7 +43,7 @@
             <div class="dropdown">
                 <p class="dropbtn" id="guides">Guides <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="#">Backup script</a>
+                    <a href="/guides/backupscript">Backup script</a>
                 </div>
             </div>
             <div class="dropdown">
