--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -81,5 +81,10 @@
     <main>
         {{ content | safe }}
     </main>
+    <footer>
+        <div class="wrapper content">
+            <p>&copy; iMatch.tech, all rights reserved!</p>
+        </div>
+    </footer>
 </body>
 </html>
