--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -37,7 +37,7 @@
     <!-- end scripts -->
 </head>
 <body>
-    <header>
+    <header id="header">
         <nav>
             <a href="/" id="home">Home</a>
             <div class="dropdown">
@@ -75,7 +75,7 @@
             </div>
         </nav>
         <div class="logo">
-            <img src="{{ logo }}" alt="logo">
+            <img src="{{ logo }}" alt="logo" id="logo">
         </div>
     </header>
     <main>
