--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -1,6 +1,8 @@
 @import './colors';
 @import './header';
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');
+
 * {
     margin: 0; 
 	padding: 0; 
@@ -9,6 +11,7 @@
 	-ms-box-sizing: border-box;
 	-o-box-sizing: border-box;
 	box-sizing: border-box;
+	font-family: 'Roboto', sans-serif;
 }
 
 .structural {
@@ -46,6 +49,17 @@ body {
 h1 {
 	margin-top: 2rem;
 	margin-bottom: 3rem;
+	font-size: 4.2rem;
+	font-weight: bold;
+}
+
+h2 {
+	font-size: 3rem;
+	font-weight: bold;
+}
+
+p {
+	font-size: 1.5rem;
 }
 
 footer {
