--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -28,11 +28,13 @@
     <!-- Google Fonts css -->
 
     <!-- custom css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="{{ style }}">
     <!-- Css End -->
 
     <!-- scripts -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
     <script src="{{ headerScript }}"></script>
     <!-- end scripts -->
 </head>
@@ -43,34 +45,32 @@
             <div class="dropdown">
                 <p class="dropbtn" id="guides">Guides <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="/guides/backupscript">Backup script</a>
+                    <a href="/guides/backupscript" class="dropdownDiv">Backup script</a>
                 </div>
             </div>
             <div class="dropdown">
                 <p class="dropbtn" id="projects">Projects <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="#">page</a>
-                    <a href="#">page</a>
-                    <a href="#">page</a>
+                    <a href="#" class="dropdownDiv">Smart mirror <br> (coming soon)</a>
                 </div>
             </div>
             <div class="dropdown">
                 <p class="dropbtn" id="games">Games <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="/games/brickbreaker">Brickbreaker</a>
+                    <a href="/games/brickbreaker" class="dropdownDiv">Brickbreaker</a>
                 </div>
             </div>
             <div class="dropdown">
                 <p class="dropbtn" id="javascript">Javascript <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="/javascript/rain">Rain</a>
+                    <a href="/javascript/rain" class="dropdownDiv">Rain</a>
                 </div>
             </div>
             <div class="dropdown">
                 <p class="dropbtn" id="info">Info <i class="fa fa-caret-down"></i></p>
                 <div class="dropdown-content">
-                    <a href="#">General info</a>
-                    <a href="/info/setup">My setup</a>
+                    <a href="/info/generalinfo" class="dropdownDiv">General info</a>
+                    <a href="/info/setup" class="dropdownDiv">My setup</a>
                 </div>
             </div>
         </nav>
