--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -58,9 +58,14 @@ h2 {
 	font-weight: bold;
 }
 
-p {
+p, td {
 	font-size: 1.5rem;
 }
+
+th {
+	font-size: 2rem;
+}
+
 
 footer {
 	background-color: $darkblue;
