--- a/src/scss/partials/_global.scss
+++ b/src/scss/partials/_global.scss
@@ -53,9 +53,15 @@ h1 {
 	font-weight: bold;
 }
 
-h2 {
-	font-size: 3rem;
+h2, h3 {
+	font-size: 3.5rem;
 	font-weight: bold;
+	margin-top: 1.5rem;
+	margin-bottom: 2.5rem;
+}
+
+h3 {
+	margin-top: 5rem;
 }
 
 p, td {
@@ -75,7 +81,7 @@ footer {
 	
 	.content {
 		display: flex;
-		justify-content: center;
+		justify-content: space-evenly;
 		p {
 			color: $white;
 		}
