--- a/src/scss/backupscript.scss
+++ b/src/scss/backupscript.scss
@@ -12,13 +12,33 @@
         height: 80%;
 
 
-        h1, h2 {
+        h1 {
             color: $white;
         }
+        
+        div {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
 
-        p {
-            color: $white;
-            margin-bottom: 2rem;
+            .text {
+                width: 50%;
+
+                h2 {
+                    color: $white;
+                }
+
+                p {
+                    color: $white;
+                    margin-bottom: 2rem;
+                }
+            }
+
+            .img {
+                img {
+                    width: 65rem;
+                }
+            }
         }
     }
 }
