--- a/src/scss/generalinfo.scss
+++ b/src/scss/generalinfo.scss
@@ -30,6 +30,7 @@
                 p {
                     color: $white;
                     margin-bottom: 2rem;
+                    text-align: justify;
                 }
             }
 
