--- a/src/scss/rain.scss
+++ b/src/scss/rain.scss
@@ -2,14 +2,14 @@
 
 .container {
     padding-top: 10rem;
-    height: 89.3vh;
+    height: 100vh;
     background: linear-gradient($black, $darkblue);
 
     .content {
         display: flex;
         flex-direction: column;
         align-items: center;
-
+        height: 100%;
 
         h1 {
             color: $white;
