--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -25,16 +25,16 @@
     <!-- Font Awesome css -->
     <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css'/>
     <!-- Swiper.js css -->
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
     <!-- Google Fonts css -->
 
     <!-- custom css -->
-    <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
     <link rel="stylesheet" href="{{ style }}">
     <!-- Css End -->
 
     <!-- scripts -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
-    <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="{{ headerScript }}"></script>
     <!-- end scripts -->
 </head>
